--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
+
+<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Noah Template</title>
@@ -9,12 +10,12 @@
 	<meta name="keywords" content="" />
 	<meta name="author" content="" />
 
-  <!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
+	<!-- Facebook and Twitter integration -->
+	<meta property="og:title" content="" />
+	<meta property="og:image" content="" />
+	<meta property="og:url" content="" />
+	<meta property="og:site_name" content="" />
+	<meta property="og:description" content="" />
 	<meta name="twitter:title" content="" />
 	<meta name="twitter:image" content="" />
 	<meta name="twitter:url" content="" />
@@ -25,7 +26,7 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700" rel="stylesheet">
-	
+
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
@@ -48,21 +49,22 @@
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
 
-	</head>
-	<body>
+</head>
+
+<body>
 
 	<nav id="colorlib-main-nav" role="navigation">
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle active"><i></i></a>
 		<div class="js-fullheight colorlib-table">
 			<div class="colorlib-table-cell js-fullheight">
-				<div class="row">
-					<div class="col-md-12">
-						<div class="form-group">
-							<input type="text" class="form-control" id="search" placeholder="Enter any key to search...">
-							<button type="submit" class="btn btn-primary"><i class="icon-search3"></i></button>
+				<!-- <div class="row">
+						<div class="col-md-12">
+							<div class="form-group">
+								<input type="text" class="form-control" id="search" placeholder="Enter any key to search...">
+								<button type="submit" class="btn btn-primary"><i class="icon-search3"></i></button>
+							</div>
 						</div>
-					</div>
-				</div>
+					</div> -->
 				<div class="row">
 					<div class="col-md-12">
 						<ul>
@@ -75,34 +77,34 @@
 						</ul>
 					</div>
 				</div>
-				<div class="row">
-					<div class="col-md-12">
-						<h2 class="head-title">Works</h2>
-						<a href="images/work-1.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-1.jpg);">
-							<span><i class="icon-search3"></i></span>
-						</a>
-						<a href="images/work-2.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-2.jpg);">
-							<span><i class="icon-search3"></i></span>
-						</a>
-						<a href="images/work-3.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-3.jpg);">
-							<span><i class="icon-search3"></i></span>
-						</a>
-						<a href="images/work-4.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-4.jpg);">
-							<span><i class="icon-search3"></i></span>
-						</a>
-					</div>
-				</div>
+				<!-- <div class="row">
+						<div class="col-md-12">
+							<h2 class="head-title">Works</h2>
+							<a href="images/work-1.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-1.jpg);">
+								<span><i class="icon-search3"></i></span>
+							</a>
+							<a href="images/work-2.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-2.jpg);">
+								<span><i class="icon-search3"></i></span>
+							</a>
+							<a href="images/work-3.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-3.jpg);">
+								<span><i class="icon-search3"></i></span>
+							</a>
+							<a href="images/work-4.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-4.jpg);">
+								<span><i class="icon-search3"></i></span>
+							</a>
+						</div>
+					</div> -->
 			</div>
 		</div>
 	</nav>
-	
+
 	<div id="colorlib-page">
 		<header>
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
 						<div class="colorlib-navbar-brand">
-							<a class="colorlib-logo" href="index.html"><span>No</span><span>ah</span></a>
+							<a class="colorlib-logo" href="index.html"><span>K.</span></a>
 						</div>
 						<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
 					</div>
@@ -116,36 +118,43 @@
 				</div>
 				<div class="row row-padded-bottom">
 					<div class="col-md-5 animate-box">
-						<img class="img-responsive about-img" src="images/about.jpg" alt="html5 bootstrap template by colorlib.com">
+						<img class="img-responsive about-img" src="images/about.jpg"
+							alt="html5 bootstrap template by colorlib.com">
 					</div>
 					<div class="col-md-6 col-md-push-1 animate-box">
 						<div class="about-desc">
-							<h2><span>Noah</span><span>Henderson</span></h2>
+							<h2><span>I'm</span><span>Kanan Patel</span></h2>
 							<div class="desc">
 								<div class="rotate">
 									<h2 class="heading">About</h2>
 								</div>
-								<p>A small river named Duden <a href="#">flows by their place</a> and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life.</p>
+								<p>Hello, I believe that design must solve a need, stir a desire for involvement, and shed light on a path that is enjoyable, trustworthy, and human.</p>
 								<p class="colorlib-social-icons">
-									<a href="#"><i class="icon-facebook4"></i></a>
-									<a href="#"><i class="icon-twitter3"></i></a>
-									<a href="#"><i class="icon-googleplus"></i></a>
-									<a href="#"><i class="icon-dribbble2"></i></a>
+									<a href="https://www.instagram.com/uiuxjunior/" target="_blank"><i
+											class="icon-instagram2"></i></a>
+									<a href="https://dribbble.com/KananPatel" target="_blank"><i
+											class="icon-dribbble"></i></a>
 								</p>
-								<p><a href="work.html" class="btn btn-primary btn-outline">View My Works</a></p>
+								<p><a href="contact.html" class="btn btn-primary btn-outline">View My Works</a></p>
 							</div>
 						</div>
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-md-4 animate-box">
-						<p>The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.</p>
+						<p>The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild
+							Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her
+							seven versalia, put her initial into the belt and made herself on the way.</p>
 					</div>
 					<div class="col-md-4 animate-box">
-						<p>The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.</p>
+						<p>The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild
+							Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her
+							seven versalia, put her initial into the belt and made herself on the way.</p>
 					</div>
 					<div class="col-md-4 animate-box">
-						<p>The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.</p>
+						<p>The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild
+							Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her
+							seven versalia, put her initial into the belt and made herself on the way.</p>
 					</div>
 				</div>
 			</div>
@@ -163,7 +172,9 @@
 									<div class="col-md-12 col-md-offset-0 animate-box intro-heading">
 										<span>Target</span>
 										<h2>Goals</h2>
-										<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+										<p>A small river named Duden flows by their place and supplies it with the
+											necessary regelialia. It is a paradisematic country, in which roasted parts
+											of sentences fly into your mouth.</p>
 									</div>
 								</div>
 								<div class="row">
@@ -175,27 +186,37 @@
 									<div class="col-md-12">
 										<div class="services animate-box">
 											<h3>1 - High Quality Theme</h3>
-											<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+											<p>Even the all-powerful Pointing has no control about the blind texts it is
+												an almost unorthographic life One day however a small line of blind text
+												by the name of Lorem Ipsum decided to leave for the far World of
+												Grammar.</p>
 										</div>
 										<div class="services animate-box">
 											<h3>2 - Customer Satisfaction</h3>
-											<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+											<p>Even the all-powerful Pointing has no control about the blind texts it is
+												an almost unorthographic life One day however a small line of blind text
+												by the name of Lorem Ipsum decided to leave for the far World of
+												Grammar.</p>
 										</div>
 										<div class="services animate-box">
 											<h3>3 - Well Mentained Sites</h3>
-											<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+											<p>Even the all-powerful Pointing has no control about the blind texts it is
+												an almost unorthographic life One day however a small line of blind text
+												by the name of Lorem Ipsum decided to leave for the far World of
+												Grammar.</p>
 										</div>
 									</div>
 								</div>
 							</div>
-							<div class="one-forth services-img" style="background-image: url(images/services-img-1.jpg);">
+							<div class="one-forth services-img"
+								style="background-image: url(images/services-img-1.jpg);">
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-
+<!-- 
 		<div id="colorlib-testimony">
 			<div class="container">
 				<div class="row text-center">
@@ -220,7 +241,8 @@
 							<div class="col-md-12 text-center">
 								<div class="testimony">
 									<blockquote>
-										<p>"A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+										<p>"A small river named Duden flows by their place and supplies it with the
+											necessary regelialia.</p>
 										<span>" &mdash; George Brooks</span>
 									</blockquote>
 								</div>
@@ -230,7 +252,9 @@
 							<div class="col-md-12 text-center">
 								<div class="testimony">
 									<blockquote>
-										<p>"Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+										<p>"Even the all-powerful Pointing has no control about the blind texts it is an
+											almost unorthographic life One day however a small line of blind text by the
+											name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
 										<span>" &mdash; Daniel Foster</span>
 									</blockquote>
 								</div>
@@ -240,7 +264,8 @@
 							<div class="col-md-12 text-center">
 								<div class="testimony">
 									<blockquote>
-										<p>"When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove</p>
+										<p>"When she reached the first hills of the Italic Mountains, she had a last
+											view back on the skyline of her hometown Bookmarksgrove</p>
 										<span>" &mdash; Liam Jenkins</span>
 									</blockquote>
 								</div>
@@ -249,28 +274,28 @@
 					</div>
 				</div>
 			</div>
-		</div>
-
+		</div> -->
+		
 		<footer>
 			<div id="footer">
 				<div class="container">
 					<div class="row">
-						<div class="col-md-4 col-pb-sm">
+						<div class="col-md-12 col-pb-sm text-center">
 							<div class="row">
-								<div class="col-md-10">
+								<div class="col-md-12">
 									<h2>Let's Talk</h2>
 									<p>A small river named Duden flows by their place and supplies.</p>
-									<p><a href="#">noah@info.com</a></p>
+									<p><a href="mailto:kananpatel.bca@gmail.com">kananpatel.bca@gmail.com</a></p>
 									<p class="colorlib-social-icons">
-										<a href="#"><i class="icon-facebook4"></i></a>
-										<a href="#"><i class="icon-twitter3"></i></a>
-										<a href="#"><i class="icon-googleplus"></i></a>
-										<a href="#"><i class="icon-dribbble2"></i></a>
+										<a href="https://www.instagram.com/uiuxjunior/" target="_blank"><i
+												class="icon-instagram2"></i></a>
+										<a href="https://dribbble.com/KananPatel" target="_blank"><i
+												class="icon-dribbble"></i></a>
 									</p>
 								</div>
 							</div>
 						</div>
-						<div class="col-md-4 col-pb-sm">
+						<!-- <div class="col-md-6 col-pb-sm">
 							<h2>Latest Blog</h2>
 							<div class="f-entry">
 								<a href="#" class="featured-img" style="background-image: url(images/img-1.jpg);"></a>
@@ -293,8 +318,8 @@
 									<h3><a href="#">Road Trip</a></h3>
 								</div>
 							</div>
-						</div>
-						<div class="col-md-4 col-pb-sm">
+						</div> -->
+						<!-- <div class="col-md-4 col-pb-sm">
 							<h2>Newsletter</h2>
 							<p>A small river named Duden flows by their place and supplies it with the necessary regelialia</p>
 							<div class="subscribe text-center">
@@ -303,21 +328,27 @@
 									<input type="submit" value="Subscribe" class="btn btn-primary btn-custom">
 								</div>
 							</div>
-						</div>
+						</div> -->
 					</div>
 					<div class="row">
 						<div class="col-md-12 text-center">
 							<p>
-								&copy; <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart4" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+								&copy;
+								<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+								Copyright &copy;
+								<script>document.write(new Date().getFullYear());</script> All rights reserved | This
+								template is made with <i class="icon-heart4" aria-hidden="true"></i> by <a
+									href="https://colorlib.com" target="_blank">Colorlib</a>
+								<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --> |
+								Modified By <a href="https://priyank-solanki.github.io" target="_blank">Priyank
+									Solanki</a>
 							</p>
 						</div>
 					</div>
 				</div>
 			</div>
 		</footer>
-	
+
 	</div>
 
 	<!-- jQuery -->
@@ -337,6 +368,6 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 	<!-- Main JS (Do not remove) -->
 	<script src="js/main.js"></script>
 
-	</body>
-</html>
+</body>
 
+</html>
