--- a/blog.html
+++ b/blog.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
+
+<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Noah Template</title>
@@ -9,12 +10,12 @@
 	<meta name="keywords" content="" />
 	<meta name="author" content="" />
 
-  <!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
+	<!-- Facebook and Twitter integration -->
+	<meta property="og:title" content="" />
+	<meta property="og:image" content="" />
+	<meta property="og:url" content="" />
+	<meta property="og:site_name" content="" />
+	<meta property="og:description" content="" />
 	<meta name="twitter:title" content="" />
 	<meta name="twitter:image" content="" />
 	<meta name="twitter:url" content="" />
@@ -25,7 +26,7 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700" rel="stylesheet">
-	
+
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
@@ -48,54 +49,55 @@
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
 
-	</head>
-	<body>
+</head>
+
+<body>
 
 	<nav id="colorlib-main-nav" role="navigation">
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle active"><i></i></a>
 		<div class="js-fullheight colorlib-table">
 			<div class="colorlib-table-cell js-fullheight">
-				<div class="row">
-					<div class="col-md-12">
-						<div class="form-group">
-							<input type="text" class="form-control" id="search" placeholder="Enter any key to search...">
-							<button type="submit" class="btn btn-primary"><i class="icon-search3"></i></button>
+				<!-- <div class="row">
+						<div class="col-md-12">
+							<div class="form-group">
+								<input type="text" class="form-control" id="search" placeholder="Enter any key to search...">
+								<button type="submit" class="btn btn-primary"><i class="icon-search3"></i></button>
+							</div>
 						</div>
-					</div>
-				</div>
+					</div> -->
 				<div class="row">
 					<div class="col-md-12">
 						<ul>
-							<li><a href="index.html">Home</a></li>
+							<li class="active"><a href="index.html">Home</a></li>
 							<li><a href="services.html">Services</a></li>
 							<li><a href="work.html">Work</a></li>
-							<li class="active"><a href="blog.html">Blog</a></li>
+							<li><a href="blog.html">Blog</a></li>
 							<li><a href="about.html">About</a></li>
 							<li><a href="contact.html">Contact</a></li>
 						</ul>
 					</div>
 				</div>
-				<div class="row">
-					<div class="col-md-12">
-						<h2 class="head-title">Works</h2>
-						<a href="images/work-1.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-1.jpg);">
-							<span><i class="icon-search3"></i></span>
-						</a>
-						<a href="images/work-2.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-2.jpg);">
-							<span><i class="icon-search3"></i></span>
-						</a>
-						<a href="images/work-3.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-3.jpg);">
-							<span><i class="icon-search3"></i></span>
-						</a>
-						<a href="images/work-4.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-4.jpg);">
-							<span><i class="icon-search3"></i></span>
-						</a>
-					</div>
-				</div>
+				<!-- <div class="row">
+						<div class="col-md-12">
+							<h2 class="head-title">Works</h2>
+							<a href="images/work-1.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-1.jpg);">
+								<span><i class="icon-search3"></i></span>
+							</a>
+							<a href="images/work-2.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-2.jpg);">
+								<span><i class="icon-search3"></i></span>
+							</a>
+							<a href="images/work-3.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-3.jpg);">
+								<span><i class="icon-search3"></i></span>
+							</a>
+							<a href="images/work-4.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-4.jpg);">
+								<span><i class="icon-search3"></i></span>
+							</a>
+						</div>
+					</div> -->
 			</div>
 		</div>
 	</nav>
-	
+
 	<div id="colorlib-page">
 		<header>
 			<div class="container">
@@ -109,7 +111,7 @@
 				</div>
 			</div>
 		</header>
-		
+
 		<div id="colorlib-blog">
 			<div class="container">
 				<div class="row text-center">
@@ -132,7 +134,8 @@
 					<div class="col-md-4">
 						<div class="article animate-box">
 							<a href="blog.html" class="blog-img">
-								<img class="img-responsive" src="images/img-1.jpg" alt="html5 bootstrap by colorlib.com">
+								<img class="img-responsive" src="images/img-1.jpg"
+									alt="html5 bootstrap by colorlib.com">
 								<div class="overlay"></div>
 								<div class="link">
 									<span class="read">Read more</h2>
@@ -141,13 +144,15 @@
 							<div class="desc">
 								<span class="meta">15, Feb 2018</span>
 								<h2><a href="blog.html">A Japanese Constellation</a></h2>
-								<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove</p>
+								<p>When she reached the first hills of the Italic Mountains, she had a last view back on
+									the skyline of her hometown Bookmarksgrove</p>
 							</div>
 						</div>
 
 						<div class="article animate-box">
 							<a href="blog.html" class="blog-img">
-								<img class="img-responsive" src="images/img-4.jpg" alt="html5 bootstrap by colorlib.com">
+								<img class="img-responsive" src="images/img-4.jpg"
+									alt="html5 bootstrap by colorlib.com">
 								<div class="overlay"></div>
 								<div class="link">
 									<span class="read">Read more</h2>
@@ -156,13 +161,15 @@
 							<div class="desc">
 								<span class="meta">15, Feb 2018</span>
 								<h2><a href="blog.html">A Japanese Constellation</a></h2>
-								<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove</p>
+								<p>When she reached the first hills of the Italic Mountains, she had a last view back on
+									the skyline of her hometown Bookmarksgrove</p>
 							</div>
 						</div>
 
 						<div class="article animate-box">
 							<a href="blog.html" class="blog-img">
-								<img class="img-responsive" src="images/img-7.jpg" alt="html5 bootstrap by colorlib.com">
+								<img class="img-responsive" src="images/img-7.jpg"
+									alt="html5 bootstrap by colorlib.com">
 								<div class="overlay"></div>
 								<div class="link">
 									<span class="read">Read more</h2>
@@ -171,55 +178,8 @@
 							<div class="desc">
 								<span class="meta">15, Feb 2018</span>
 								<h2><a href="blog.html">A Japanese Constellation</a></h2>
-								<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove</p>
-							</div>
-						</div>
-					</div>
-
-
-					<div class="col-md-4">
-						<div class="article animate-box">
-							<a href="blog.html" class="blog-img">
-								<img class="img-responsive" src="images/img-2.jpg" alt="html5 bootstrap by colorlib.com">
-								<div class="overlay"></div>
-								<div class="link">
-									<span class="read">Read more</h2>
-								</div>
-							</a>
-							<div class="desc">
-								<span class="meta">15, Feb 2018</span>
-								<h2><a href="blog.html">A Japanese Constellation</a></h2>
-								<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove</p>
-							</div>
-						</div>
-						
-						<div class="article animate-box">
-							<a href="blog.html" class="blog-img">
-								<img class="img-responsive" src="images/img-5.jpg" alt="html5 bootstrap by colorlib.com">
-								<div class="overlay"></div>
-								<div class="link">
-									<span class="read">Read more</h2>
-								</div>
-							</a>
-							<div class="desc">
-								<span class="meta">15, Feb 2018</span>
-								<h2><a href="blog.html">A Japanese Constellation</a></h2>
-								<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove</p>
-							</div>
-						</div>
-
-						<div class="article animate-box">
-							<a href="blog.html" class="blog-img">
-								<img class="img-responsive" src="images/img-8.jpg" alt="html5 bootstrap by colorlib.com">
-								<div class="overlay"></div>
-								<div class="link">
-									<span class="read">Read more</h2>
-								</div>
-							</a>
-							<div class="desc">
-								<span class="meta">15, Feb 2018</span>
-								<h2><a href="blog.html">A Japanese Constellation</a></h2>
-								<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove</p>
+								<p>When she reached the first hills of the Italic Mountains, she had a last view back on
+									the skyline of her hometown Bookmarksgrove</p>
 							</div>
 						</div>
 					</div>
@@ -228,7 +188,8 @@
 					<div class="col-md-4">
 						<div class="article animate-box">
 							<a href="blog.html" class="blog-img">
-								<img class="img-responsive" src="images/img-3.jpg" alt="html5 bootstrap by colorlib.com">
+								<img class="img-responsive" src="images/img-2.jpg"
+									alt="html5 bootstrap by colorlib.com">
 								<div class="overlay"></div>
 								<div class="link">
 									<span class="read">Read more</h2>
@@ -237,13 +198,15 @@
 							<div class="desc">
 								<span class="meta">15, Feb 2018</span>
 								<h2><a href="blog.html">A Japanese Constellation</a></h2>
-								<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove</p>
+								<p>When she reached the first hills of the Italic Mountains, she had a last view back on
+									the skyline of her hometown Bookmarksgrove</p>
 							</div>
 						</div>
 
 						<div class="article animate-box">
 							<a href="blog.html" class="blog-img">
-								<img class="img-responsive" src="images/img-6.jpg" alt="html5 bootstrap by colorlib.com">
+								<img class="img-responsive" src="images/img-5.jpg"
+									alt="html5 bootstrap by colorlib.com">
 								<div class="overlay"></div>
 								<div class="link">
 									<span class="read">Read more</h2>
@@ -252,13 +215,15 @@
 							<div class="desc">
 								<span class="meta">15, Feb 2018</span>
 								<h2><a href="blog.html">A Japanese Constellation</a></h2>
-								<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove</p>
+								<p>When she reached the first hills of the Italic Mountains, she had a last view back on
+									the skyline of her hometown Bookmarksgrove</p>
 							</div>
 						</div>
 
 						<div class="article animate-box">
 							<a href="blog.html" class="blog-img">
-								<img class="img-responsive" src="images/img-9.jpg" alt="html5 bootstrap by colorlib.com">
+								<img class="img-responsive" src="images/img-8.jpg"
+									alt="html5 bootstrap by colorlib.com">
 								<div class="overlay"></div>
 								<div class="link">
 									<span class="read">Read more</h2>
@@ -267,7 +232,62 @@
 							<div class="desc">
 								<span class="meta">15, Feb 2018</span>
 								<h2><a href="blog.html">A Japanese Constellation</a></h2>
-								<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove</p>
+								<p>When she reached the first hills of the Italic Mountains, she had a last view back on
+									the skyline of her hometown Bookmarksgrove</p>
+							</div>
+						</div>
+					</div>
+
+
+					<div class="col-md-4">
+						<div class="article animate-box">
+							<a href="blog.html" class="blog-img">
+								<img class="img-responsive" src="images/img-3.jpg"
+									alt="html5 bootstrap by colorlib.com">
+								<div class="overlay"></div>
+								<div class="link">
+									<span class="read">Read more</h2>
+								</div>
+							</a>
+							<div class="desc">
+								<span class="meta">15, Feb 2018</span>
+								<h2><a href="blog.html">A Japanese Constellation</a></h2>
+								<p>When she reached the first hills of the Italic Mountains, she had a last view back on
+									the skyline of her hometown Bookmarksgrove</p>
+							</div>
+						</div>
+
+						<div class="article animate-box">
+							<a href="blog.html" class="blog-img">
+								<img class="img-responsive" src="images/img-6.jpg"
+									alt="html5 bootstrap by colorlib.com">
+								<div class="overlay"></div>
+								<div class="link">
+									<span class="read">Read more</h2>
+								</div>
+							</a>
+							<div class="desc">
+								<span class="meta">15, Feb 2018</span>
+								<h2><a href="blog.html">A Japanese Constellation</a></h2>
+								<p>When she reached the first hills of the Italic Mountains, she had a last view back on
+									the skyline of her hometown Bookmarksgrove</p>
+							</div>
+						</div>
+
+						<div class="article animate-box">
+							<a href="blog.html" class="blog-img">
+								<img class="img-responsive" src="images/img-9.jpg"
+									alt="html5 bootstrap by colorlib.com">
+								<div class="overlay"></div>
+								<div class="link">
+									<span class="read">Read more</h2>
+								</div>
+							</a>
+							<div class="desc">
+								<span class="meta">15, Feb 2018</span>
+								<h2><a href="blog.html">A Japanese Constellation</a></h2>
+								<p>When she reached the first hills of the Italic Mountains, she had a last view back on
+									the skyline of her hometown Bookmarksgrove</p>
 							</div>
 						</div>
 					</div>
@@ -321,10 +341,12 @@
 						</div>
 						<div class="col-md-4 col-pb-sm">
 							<h2>Newsletter</h2>
-							<p>A small river named Duden flows by their place and supplies it with the necessary regelialia</p>
+							<p>A small river named Duden flows by their place and supplies it with the necessary
+								regelialia</p>
 							<div class="subscribe text-center">
 								<div class="form-group">
-									<input type="text" class="form-control text-center" placeholder="Enter Email address">
+									<input type="text" class="form-control text-center"
+										placeholder="Enter Email address">
 									<input type="submit" value="Subscribe" class="btn btn-primary btn-custom">
 								</div>
 							</div>
@@ -333,16 +355,20 @@
 					<div class="row">
 						<div class="col-md-12 text-center">
 							<p>
-								&copy; <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart4" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+								&copy;
+								<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+								Copyright &copy;
+								<script>document.write(new Date().getFullYear());</script> All rights reserved | This
+								template is made with <i class="icon-heart4" aria-hidden="true"></i> by <a
+									href="https://colorlib.com" target="_blank">Colorlib</a>
+								<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 							</p>
 						</div>
 					</div>
 				</div>
 			</div>
 		</footer>
-	
+
 	</div>
 
 	<!-- jQuery -->
@@ -362,6 +388,6 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 	<!-- Main JS (Do not remove) -->
 	<script src="js/main.js"></script>
 
-	</body>
-</html>
+</body>
 
+</html>
