--- a/services.html
+++ b/services.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
+
+<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Noah Template</title>
@@ -9,12 +10,12 @@
 	<meta name="keywords" content="" />
 	<meta name="author" content="" />
 
-  <!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
+	<!-- Facebook and Twitter integration -->
+	<meta property="og:title" content="" />
+	<meta property="og:image" content="" />
+	<meta property="og:url" content="" />
+	<meta property="og:site_name" content="" />
+	<meta property="og:description" content="" />
 	<meta name="twitter:title" content="" />
 	<meta name="twitter:image" content="" />
 	<meta name="twitter:url" content="" />
@@ -25,7 +26,7 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700" rel="stylesheet">
-	
+
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
@@ -48,26 +49,27 @@
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
 
-	</head>
-	<body>
+</head>
+
+<body>
 
 	<nav id="colorlib-main-nav" role="navigation">
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle active"><i></i></a>
 		<div class="js-fullheight colorlib-table">
 			<div class="colorlib-table-cell js-fullheight">
-				<div class="row">
-					<div class="col-md-12">
-						<div class="form-group">
-							<input type="text" class="form-control" id="search" placeholder="Enter any key to search...">
-							<button type="submit" class="btn btn-primary"><i class="icon-search3"></i></button>
+				<!-- <div class="row">
+						<div class="col-md-12">
+							<div class="form-group">
+								<input type="text" class="form-control" id="search" placeholder="Enter any key to search...">
+								<button type="submit" class="btn btn-primary"><i class="icon-search3"></i></button>
+							</div>
 						</div>
-					</div>
-				</div>
+					</div> -->
 				<div class="row">
 					<div class="col-md-12">
 						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li class="active"><a href="services.html">Services</a></li>
+							<li class="active"><a href="index.html">Home</a></li>
+							<li><a href="services.html">Services</a></li>
 							<li><a href="work.html">Work</a></li>
 							<li><a href="blog.html">Blog</a></li>
 							<li><a href="about.html">About</a></li>
@@ -75,27 +77,27 @@
 						</ul>
 					</div>
 				</div>
-				<div class="row">
-					<div class="col-md-12">
-						<h2 class="head-title">Works</h2>
-						<a href="images/work-1.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-1.jpg);">
-							<span><i class="icon-search3"></i></span>
-						</a>
-						<a href="images/work-2.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-2.jpg);">
-							<span><i class="icon-search3"></i></span>
-						</a>
-						<a href="images/work-3.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-3.jpg);">
-							<span><i class="icon-search3"></i></span>
-						</a>
-						<a href="images/work-4.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-4.jpg);">
-							<span><i class="icon-search3"></i></span>
-						</a>
-					</div>
-				</div>
+				<!-- <div class="row">
+						<div class="col-md-12">
+							<h2 class="head-title">Works</h2>
+							<a href="images/work-1.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-1.jpg);">
+								<span><i class="icon-search3"></i></span>
+							</a>
+							<a href="images/work-2.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-2.jpg);">
+								<span><i class="icon-search3"></i></span>
+							</a>
+							<a href="images/work-3.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-3.jpg);">
+								<span><i class="icon-search3"></i></span>
+							</a>
+							<a href="images/work-4.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-4.jpg);">
+								<span><i class="icon-search3"></i></span>
+							</a>
+						</div>
+					</div> -->
 			</div>
 		</div>
 	</nav>
-	
+
 	<div id="colorlib-page">
 		<header>
 			<div class="container">
@@ -192,58 +194,58 @@
 					</div>
 				</div>
 				<div class="row">
-			      <div class="col-md-3 col-sm-6 text-center">
-			      	<h2 class="progress-head">Graphic Design</h2>
-		            <div class="progress blue">
-		                <span class="progress-left">
-		                    <span class="progress-bar"></span>
-		                </span>
-		                <span class="progress-right">
-		                    <span class="progress-bar"></span>
-		                </span>
-		                <div class="progress-value">100%</div>
-		            </div>
-		         </div>
-			 
-		         <div class="col-md-3 col-sm-6 text-center">
-		         	<h2 class="progress-head">Illustration</h2>
-		            <div class="progress yellow">
-		                <span class="progress-left">
-		                    <span class="progress-bar"></span>
-		                </span>
-		                <span class="progress-right">
-		                    <span class="progress-bar"></span>
-		                </span>
-		                <div class="progress-value">85%</div>
-		            </div>
-		         </div>
+					<div class="col-md-3 col-sm-6 text-center">
+						<h2 class="progress-head">Graphic Design</h2>
+						<div class="progress blue">
+							<span class="progress-left">
+								<span class="progress-bar"></span>
+							</span>
+							<span class="progress-right">
+								<span class="progress-bar"></span>
+							</span>
+							<div class="progress-value">100%</div>
+						</div>
+					</div>
 
-		         <div class="col-md-3 col-sm-6 text-center">
-		         	<h2 class="progress-head">Front-End Development</h2>
-		            <div class="progress pink">
-		                <span class="progress-left">
-		                    <span class="progress-bar"></span>
-		                </span>
-		                <span class="progress-right">
-		                    <span class="progress-bar"></span>
-		                </span>
-		                <div class="progress-value">75%</div>
-		            </div>
-		         </div>
+					<div class="col-md-3 col-sm-6 text-center">
+						<h2 class="progress-head">Illustration</h2>
+						<div class="progress yellow">
+							<span class="progress-left">
+								<span class="progress-bar"></span>
+							</span>
+							<span class="progress-right">
+								<span class="progress-bar"></span>
+							</span>
+							<div class="progress-value">85%</div>
+						</div>
+					</div>
 
-		         <div class="col-md-3 col-sm-6 text-center">
-		         	<h2 class="progress-head">Web Marketing</h2>
-		            <div class="progress green">
-		                <span class="progress-left">
-		                    <span class="progress-bar"></span>
-		                </span>
-		                <span class="progress-right">
-		                    <span class="progress-bar"></span>
-		                </span>
-		                <div class="progress-value">80%</div>
-		            </div>
-		         </div>
-			   </div>
+					<div class="col-md-3 col-sm-6 text-center">
+						<h2 class="progress-head">Front-End Development</h2>
+						<div class="progress pink">
+							<span class="progress-left">
+								<span class="progress-bar"></span>
+							</span>
+							<span class="progress-right">
+								<span class="progress-bar"></span>
+							</span>
+							<div class="progress-value">75%</div>
+						</div>
+					</div>
+
+					<div class="col-md-3 col-sm-6 text-center">
+						<h2 class="progress-head">Web Marketing</h2>
+						<div class="progress green">
+							<span class="progress-left">
+								<span class="progress-bar"></span>
+							</span>
+							<span class="progress-right">
+								<span class="progress-bar"></span>
+							</span>
+							<div class="progress-value">80%</div>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 
@@ -271,7 +273,8 @@
 							<div class="col-md-12 text-center">
 								<div class="testimony">
 									<blockquote>
-										<p>"A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+										<p>"A small river named Duden flows by their place and supplies it with the
+											necessary regelialia.</p>
 										<span>" &mdash; George Brooks</span>
 									</blockquote>
 								</div>
@@ -281,7 +284,9 @@
 							<div class="col-md-12 text-center">
 								<div class="testimony">
 									<blockquote>
-										<p>"Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+										<p>"Even the all-powerful Pointing has no control about the blind texts it is an
+											almost unorthographic life One day however a small line of blind text by the
+											name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
 										<span>" &mdash; Daniel Foster</span>
 									</blockquote>
 								</div>
@@ -291,7 +296,8 @@
 							<div class="col-md-12 text-center">
 								<div class="testimony">
 									<blockquote>
-										<p>"When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove</p>
+										<p>"When she reached the first hills of the Italic Mountains, she had a last
+											view back on the skyline of her hometown Bookmarksgrove</p>
 										<span>" &mdash; Liam Jenkins</span>
 									</blockquote>
 								</div>
@@ -347,10 +353,12 @@
 						</div>
 						<div class="col-md-4 col-pb-sm">
 							<h2>Newsletter</h2>
-							<p>A small river named Duden flows by their place and supplies it with the necessary regelialia</p>
+							<p>A small river named Duden flows by their place and supplies it with the necessary
+								regelialia</p>
 							<div class="subscribe text-center">
 								<div class="form-group">
-									<input type="text" class="form-control text-center" placeholder="Enter Email address">
+									<input type="text" class="form-control text-center"
+										placeholder="Enter Email address">
 									<input type="submit" value="Subscribe" class="btn btn-primary btn-custom">
 								</div>
 							</div>
@@ -359,16 +367,20 @@
 					<div class="row">
 						<div class="col-md-12 text-center">
 							<p>
-								&copy; <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart4" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+								&copy;
+								<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+								Copyright &copy;
+								<script>document.write(new Date().getFullYear());</script> All rights reserved | This
+								template is made with <i class="icon-heart4" aria-hidden="true"></i> by <a
+									href="https://colorlib.com" target="_blank">Colorlib</a>
+								<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 							</p>
 						</div>
 					</div>
 				</div>
 			</div>
 		</footer>
-	
+
 	</div>
 
 	<!-- jQuery -->
@@ -388,6 +400,6 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 	<!-- Main JS (Do not remove) -->
 	<script src="js/main.js"></script>
 
-	</body>
-</html>
+</body>
 
+</html>
