--- a/work-single.html
+++ b/work-single.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
+
+<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Noah Template</title>
@@ -9,12 +10,12 @@
 	<meta name="keywords" content="" />
 	<meta name="author" content="" />
 
-  <!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
+	<!-- Facebook and Twitter integration -->
+	<meta property="og:title" content="" />
+	<meta property="og:image" content="" />
+	<meta property="og:url" content="" />
+	<meta property="og:site_name" content="" />
+	<meta property="og:description" content="" />
 	<meta name="twitter:title" content="" />
 	<meta name="twitter:image" content="" />
 	<meta name="twitter:url" content="" />
@@ -25,7 +26,7 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700" rel="stylesheet">
-	
+
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
@@ -48,54 +49,55 @@
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
 
-	</head>
-	<body>
+</head>
+
+<body>
 
 	<nav id="colorlib-main-nav" role="navigation">
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle active"><i></i></a>
 		<div class="js-fullheight colorlib-table">
 			<div class="colorlib-table-cell js-fullheight">
-				<div class="row">
-					<div class="col-md-12">
-						<div class="form-group">
-							<input type="text" class="form-control" id="search" placeholder="Enter any key to search...">
-							<button type="submit" class="btn btn-primary"><i class="icon-search3"></i></button>
+				<!-- <div class="row">
+						<div class="col-md-12">
+							<div class="form-group">
+								<input type="text" class="form-control" id="search" placeholder="Enter any key to search...">
+								<button type="submit" class="btn btn-primary"><i class="icon-search3"></i></button>
+							</div>
 						</div>
-					</div>
-				</div>
+					</div> -->
 				<div class="row">
 					<div class="col-md-12">
 						<ul>
-							<li><a href="index.html">Home</a></li>
+							<li class="active"><a href="index.html">Home</a></li>
 							<li><a href="services.html">Services</a></li>
-							<li class="active"><a href="work.html">Work</a></li>
+							<li><a href="work.html">Work</a></li>
 							<li><a href="blog.html">Blog</a></li>
 							<li><a href="about.html">About</a></li>
 							<li><a href="contact.html">Contact</a></li>
 						</ul>
 					</div>
 				</div>
-				<div class="row">
-					<div class="col-md-12">
-						<h2 class="head-title">Works</h2>
-						<a href="images/work-1.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-1.jpg);">
-							<span><i class="icon-search3"></i></span>
-						</a>
-						<a href="images/work-2.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-2.jpg);">
-							<span><i class="icon-search3"></i></span>
-						</a>
-						<a href="images/work-3.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-3.jpg);">
-							<span><i class="icon-search3"></i></span>
-						</a>
-						<a href="images/work-4.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-4.jpg);">
-							<span><i class="icon-search3"></i></span>
-						</a>
-					</div>
-				</div>
+				<!-- <div class="row">
+						<div class="col-md-12">
+							<h2 class="head-title">Works</h2>
+							<a href="images/work-1.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-1.jpg);">
+								<span><i class="icon-search3"></i></span>
+							</a>
+							<a href="images/work-2.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-2.jpg);">
+								<span><i class="icon-search3"></i></span>
+							</a>
+							<a href="images/work-3.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-3.jpg);">
+								<span><i class="icon-search3"></i></span>
+							</a>
+							<a href="images/work-4.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-4.jpg);">
+								<span><i class="icon-search3"></i></span>
+							</a>
+						</div>
+					</div> -->
 			</div>
 		</div>
 	</nav>
-	
+
 	<div id="colorlib-page">
 		<header>
 			<div class="container">
@@ -135,10 +137,22 @@
 							<div class="col-md-8 col-md-offset-2">
 								<div class="desc">
 									<h2>Pursuing Best</h2>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-									<p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country. But nothing the copy said could convince her and so it didn’t take long until a few insidious Copy Writers ambushed her, made her drunk with Longe and Parole and dragged her into their agency, where they abused her for their.</p>
-									<img class="img-responsive" src="images/work-2.jpg" alt="html5 bootstrap template by colorlib.com"><br>
-									<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane. Pityful a rethoric question ran over her cheek, then she continued her way.</p>
+									<p>Far far away, behind the word mountains, far from the countries Vokalia and
+										Consonantia, there live the blind texts. Separated they live in Bookmarksgrove
+										right at the coast of the Semantics, a large language ocean.</p>
+									<p>On her way she met a copy. The copy warned the Little Blind Text, that where it
+										came from it would have been rewritten a thousand times and everything that was
+										left from its origin would be the word "and" and the Little Blind Text should
+										turn around and return to its own, safe country. But nothing the copy said could
+										convince her and so it didn’t take long until a few insidious Copy Writers
+										ambushed her, made her drunk with Longe and Parole and dragged her into their
+										agency, where they abused her for their.</p>
+									<img class="img-responsive" src="images/work-2.jpg"
+										alt="html5 bootstrap template by colorlib.com"><br>
+									<p>When she reached the first hills of the Italic Mountains, she had a last view
+										back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet
+										Village and the subline of her own road, the Line Lane. Pityful a rethoric
+										question ran over her cheek, then she continued her way.</p>
 									<p class="read"><a href="#">Live Preview</a></p>
 								</div>
 							</div>
@@ -193,10 +207,12 @@
 						</div>
 						<div class="col-md-4 col-pb-sm">
 							<h2>Newsletter</h2>
-							<p>A small river named Duden flows by their place and supplies it with the necessary regelialia</p>
+							<p>A small river named Duden flows by their place and supplies it with the necessary
+								regelialia</p>
 							<div class="subscribe text-center">
 								<div class="form-group">
-									<input type="text" class="form-control text-center" placeholder="Enter Email address">
+									<input type="text" class="form-control text-center"
+										placeholder="Enter Email address">
 									<input type="submit" value="Subscribe" class="btn btn-primary btn-custom">
 								</div>
 							</div>
@@ -205,16 +221,20 @@
 					<div class="row">
 						<div class="col-md-12 text-center">
 							<p>
-								&copy; <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart4" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+								&copy;
+								<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+								Copyright &copy;
+								<script>document.write(new Date().getFullYear());</script> All rights reserved | This
+								template is made with <i class="icon-heart4" aria-hidden="true"></i> by <a
+									href="https://colorlib.com" target="_blank">Colorlib</a>
+								<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 							</p>
 						</div>
 					</div>
 				</div>
 			</div>
 		</footer>
-	
+
 	</div>
 
 	<!-- jQuery -->
@@ -234,6 +254,6 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 	<!-- Main JS (Do not remove) -->
 	<script src="js/main.js"></script>
 
-	</body>
-</html>
+</body>
 
+</html>
