--- a/work.html
+++ b/work.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
+
+<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Noah Template</title>
@@ -9,12 +10,12 @@
 	<meta name="keywords" content="" />
 	<meta name="author" content="" />
 
-  <!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
+	<!-- Facebook and Twitter integration -->
+	<meta property="og:title" content="" />
+	<meta property="og:image" content="" />
+	<meta property="og:url" content="" />
+	<meta property="og:site_name" content="" />
+	<meta property="og:description" content="" />
 	<meta name="twitter:title" content="" />
 	<meta name="twitter:image" content="" />
 	<meta name="twitter:url" content="" />
@@ -25,7 +26,7 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700" rel="stylesheet">
-	
+
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
@@ -48,54 +49,55 @@
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
 
-	</head>
-	<body>
+</head>
+
+<body>
 
 	<nav id="colorlib-main-nav" role="navigation">
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle active"><i></i></a>
 		<div class="js-fullheight colorlib-table">
 			<div class="colorlib-table-cell js-fullheight">
-				<div class="row">
-					<div class="col-md-12">
-						<div class="form-group">
-							<input type="text" class="form-control" id="search" placeholder="Enter any key to search...">
-							<button type="submit" class="btn btn-primary"><i class="icon-search3"></i></button>
+				<!-- <div class="row">
+						<div class="col-md-12">
+							<div class="form-group">
+								<input type="text" class="form-control" id="search" placeholder="Enter any key to search...">
+								<button type="submit" class="btn btn-primary"><i class="icon-search3"></i></button>
+							</div>
 						</div>
-					</div>
-				</div>
+					</div> -->
 				<div class="row">
 					<div class="col-md-12">
 						<ul>
-							<li><a href="index.html">Home</a></li>
+							<li class="active"><a href="index.html">Home</a></li>
 							<li><a href="services.html">Services</a></li>
-							<li class="active"><a href="work.html">Work</a></li>
+							<li><a href="work.html">Work</a></li>
 							<li><a href="blog.html">Blog</a></li>
 							<li><a href="about.html">About</a></li>
 							<li><a href="contact.html">Contact</a></li>
 						</ul>
 					</div>
 				</div>
-				<div class="row">
-					<div class="col-md-12">
-						<h2 class="head-title">Works</h2>
-						<a href="images/work-1.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-1.jpg);">
-							<span><i class="icon-search3"></i></span>
-						</a>
-						<a href="images/work-2.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-2.jpg);">
-							<span><i class="icon-search3"></i></span>
-						</a>
-						<a href="images/work-3.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-3.jpg);">
-							<span><i class="icon-search3"></i></span>
-						</a>
-						<a href="images/work-4.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-4.jpg);">
-							<span><i class="icon-search3"></i></span>
-						</a>
-					</div>
-				</div>
+				<!-- <div class="row">
+						<div class="col-md-12">
+							<h2 class="head-title">Works</h2>
+							<a href="images/work-1.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-1.jpg);">
+								<span><i class="icon-search3"></i></span>
+							</a>
+							<a href="images/work-2.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-2.jpg);">
+								<span><i class="icon-search3"></i></span>
+							</a>
+							<a href="images/work-3.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-3.jpg);">
+								<span><i class="icon-search3"></i></span>
+							</a>
+							<a href="images/work-4.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-4.jpg);">
+								<span><i class="icon-search3"></i></span>
+							</a>
+						</div>
+					</div> -->
 			</div>
 		</div>
 	</nav>
-	
+
 	<div id="colorlib-page">
 		<header>
 			<div class="container">
@@ -130,7 +132,8 @@
 				<div class="row">
 					<div class="col-md-12">
 						<div class="work-entry animate-box">
-							<a href="work-single.html" class="work-img" style="background-image: url(images/work-1.jpg);">
+							<a href="work-single.html" class="work-img"
+								style="background-image: url(images/work-1.jpg);">
 								<div class="display-t">
 									<div class="work-name">
 										<h2>Pursuing Best</h2>
@@ -139,7 +142,9 @@
 							</a>
 							<div class="col-md-4 col-md-offset-4">
 								<div class="desc">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p>Far far away, behind the word mountains, far from the countries Vokalia and
+										Consonantia, there live the blind texts. Separated they live in Bookmarksgrove
+										right at the coast of the Semantics, a large language ocean.</p>
 									<p class="read"><a href="#">View details</a></p>
 								</div>
 							</div>
@@ -147,7 +152,8 @@
 					</div>
 					<div class="col-md-12">
 						<div class="work-entry animate-box">
-							<a href="work-single.html" class="work-img" style="background-image: url(images/work-2.jpg);">
+							<a href="work-single.html" class="work-img"
+								style="background-image: url(images/work-2.jpg);">
 								<div class="display-t">
 									<div class="work-name">
 										<h2>Coordinates</h2>
@@ -156,7 +162,9 @@
 							</a>
 							<div class="col-md-4 col-md-offset-4">
 								<div class="desc">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p>Far far away, behind the word mountains, far from the countries Vokalia and
+										Consonantia, there live the blind texts. Separated they live in Bookmarksgrove
+										right at the coast of the Semantics, a large language ocean.</p>
 									<p class="read"><a href="#">View Details</a></p>
 								</div>
 							</div>
@@ -164,7 +172,8 @@
 					</div>
 					<div class="col-md-12">
 						<div class="work-entry animate-box">
-							<a href="work-single.html" class="work-img" style="background-image: url(images/work-3.jpg);">
+							<a href="work-single.html" class="work-img"
+								style="background-image: url(images/work-3.jpg);">
 								<div class="display-t">
 									<div class="work-name">
 										<h2>Cristall</h2>
@@ -173,7 +182,9 @@
 							</a>
 							<div class="col-md-4 col-md-offset-4">
 								<div class="desc">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p>Far far away, behind the word mountains, far from the countries Vokalia and
+										Consonantia, there live the blind texts. Separated they live in Bookmarksgrove
+										right at the coast of the Semantics, a large language ocean.</p>
 									<p class="read"><a href="#">View details</a></p>
 								</div>
 							</div>
@@ -181,7 +192,8 @@
 					</div>
 					<div class="col-md-12">
 						<div class="work-entry animate-box">
-							<a href="work-single.html" class="work-img" style="background-image: url(images/work-4.jpg);">
+							<a href="work-single.html" class="work-img"
+								style="background-image: url(images/work-4.jpg);">
 								<div class="display-t">
 									<div class="work-name">
 										<h2>Black</h2>
@@ -190,7 +202,9 @@
 							</a>
 							<div class="col-md-4 col-md-offset-4">
 								<div class="desc">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p>Far far away, behind the word mountains, far from the countries Vokalia and
+										Consonantia, there live the blind texts. Separated they live in Bookmarksgrove
+										right at the coast of the Semantics, a large language ocean.</p>
 									<p class="read"><a href="#">View details</a></p>
 								</div>
 							</div>
@@ -198,7 +212,8 @@
 					</div>
 					<div class="col-md-12">
 						<div class="work-entry animate-box">
-							<a href="work-single.html" class="work-img" style="background-image: url(images/work-5.jpg);">
+							<a href="work-single.html" class="work-img"
+								style="background-image: url(images/work-5.jpg);">
 								<div class="display-t">
 									<div class="work-name">
 										<h2>Black</h2>
@@ -207,7 +222,9 @@
 							</a>
 							<div class="col-md-4 col-md-offset-4">
 								<div class="desc">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p>Far far away, behind the word mountains, far from the countries Vokalia and
+										Consonantia, there live the blind texts. Separated they live in Bookmarksgrove
+										right at the coast of the Semantics, a large language ocean.</p>
 									<p class="read"><a href="#">View details</a></p>
 								</div>
 							</div>
@@ -215,7 +232,8 @@
 					</div>
 					<div class="col-md-12">
 						<div class="work-entry animate-box">
-							<a href="work-single.html" class="work-img" style="background-image: url(images/work-6.jpg);">
+							<a href="work-single.html" class="work-img"
+								style="background-image: url(images/work-6.jpg);">
 								<div class="display-t">
 									<div class="work-name">
 										<h2>Black</h2>
@@ -224,7 +242,9 @@
 							</a>
 							<div class="col-md-4 col-md-offset-4">
 								<div class="desc">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p>Far far away, behind the word mountains, far from the countries Vokalia and
+										Consonantia, there live the blind texts. Separated they live in Bookmarksgrove
+										right at the coast of the Semantics, a large language ocean.</p>
 									<p class="read"><a href="#">View details</a></p>
 								</div>
 							</div>
@@ -232,7 +252,8 @@
 					</div>
 					<div class="col-md-12">
 						<div class="work-entry animate-box">
-							<a href="work-single.html" class="work-img" style="background-image: url(images/work-7.jpg);">
+							<a href="work-single.html" class="work-img"
+								style="background-image: url(images/work-7.jpg);">
 								<div class="display-t">
 									<div class="work-name">
 										<h2>Indice</h2>
@@ -241,7 +262,9 @@
 							</a>
 							<div class="col-md-4 col-md-offset-4">
 								<div class="desc">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p>Far far away, behind the word mountains, far from the countries Vokalia and
+										Consonantia, there live the blind texts. Separated they live in Bookmarksgrove
+										right at the coast of the Semantics, a large language ocean.</p>
 									<p class="read"><a href="#">View details</a></p>
 								</div>
 							</div>
@@ -296,10 +319,12 @@
 						</div>
 						<div class="col-md-4 col-pb-sm">
 							<h2>Newsletter</h2>
-							<p>A small river named Duden flows by their place and supplies it with the necessary regelialia</p>
+							<p>A small river named Duden flows by their place and supplies it with the necessary
+								regelialia</p>
 							<div class="subscribe text-center">
 								<div class="form-group">
-									<input type="text" class="form-control text-center" placeholder="Enter Email address">
+									<input type="text" class="form-control text-center"
+										placeholder="Enter Email address">
 									<input type="submit" value="Subscribe" class="btn btn-primary btn-custom">
 								</div>
 							</div>
@@ -308,16 +333,20 @@
 					<div class="row">
 						<div class="col-md-12 text-center">
 							<p>
-								&copy; <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart4" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+								&copy;
+								<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+								Copyright &copy;
+								<script>document.write(new Date().getFullYear());</script> All rights reserved | This
+								template is made with <i class="icon-heart4" aria-hidden="true"></i> by <a
+									href="https://colorlib.com" target="_blank">Colorlib</a>
+								<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 							</p>
 						</div>
 					</div>
 				</div>
 			</div>
 		</footer>
-	
+
 	</div>
 
 	<!-- jQuery -->
@@ -337,6 +366,6 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 	<!-- Main JS (Do not remove) -->
 	<script src="js/main.js"></script>
 
-	</body>
-</html>
+</body>
 
+</html>
