single about data for index and about page

--- a/about.html
+++ b/about.html
@@ -128,7 +128,7 @@
 								<div class="rotate">
 									<h2 class="heading">About</h2>
 								</div>
-								<p>Hello, I believe that design must solve a need, stir a desire for involvement, and
+								<p>Hello, I'm UI / UI Designer and I believe that design must solve a need, stir a desire for involvement, and
 									shed light on a path that is enjoyable, trustworthy, and human.</p>
 								<p class="colorlib-social-icons">
 									<a href="https://www.instagram.com/uiuxjunior/" target="_blank"><i
