--- a/index.html
+++ b/index.html
@@ -117,40 +117,30 @@
 					<h2 class="bold">About</h2>
 				</div>
 				<div class="row">
-					<div class="col-md-5 animate-box">
-						<div class="owl-carousel3">
-							<div class="item">
-								<img class="img-responsive about-img" src="images/about.jpg"
-									alt="html5 bootstrap template by colorlib.com">
-							</div>
-							<div class="item">
-								<img class="img-responsive about-img" src="images/about-2.jpg"
-									alt="html5 bootstrap template by colorlib.com">
-							</div>
+
+					<div class="row row-padded-bottom">
+						<div class="col-md-5 animate-box">
+							<img class="img-responsive about-img" src="images/about.jpg"
+								alt="html5 bootstrap template by colorlib.com">
 						</div>
-					</div>
-					<div class="col-md-6 col-md-push-1 animate-box">
-						<div class="about-desc">
-							<div class="owl-carousel3">
-								<div class="item">
-									<h2><span>I'm</span><span>Kanan Patel</span></h2>
+						<div class="col-md-6 col-md-push-1 animate-box">
+							<div class="about-desc">
+								<h2><span>I'm</span><span>Kanan Patel</span></h2>
+								<div class="desc">
+									<div class="rotate">
+										<h2 class="heading">About</h2>
+									</div>
+									<p>Hello, I'm UI / UI Designer and I believe that design must solve a need, stir a desire for involvement,
+										and
+										shed light on a path that is enjoyable, trustworthy, and human.</p>
+									<p class="colorlib-social-icons">
+										<a href="https://www.instagram.com/uiuxjunior/" target="_blank"><i
+												class="icon-instagram2"></i></a>
+										<a href="https://dribbble.com/KananPatel" target="_blank"><i
+												class="icon-dribbble"></i></a>
+									</p>
+									<p><a href="work.html" class="btn btn-primary btn-outline">View My Works</a></p>
 								</div>
-								<div class="item">
-									<h2><span>I'm</span><span>An UX / UI Designer</span></h2>
-								</div>
-							</div>
-							<div class="desc">
-								<div class="rotate">
-									<h2 class="heading">About</h2>
-								</div>
-								<p>Hello, I believe that design must solve a need, stir a desire for involvement, and shed light on a path that is enjoyable, trustworthy, and human.</p>
-								<p class="colorlib-social-icons">
-									<a href="https://www.instagram.com/uiuxjunior/" target="_blank"><i
-											class="icon-instagram2"></i></a>
-									<a href="https://dribbble.com/KananPatel" target="_blank"><i
-											class="icon-dribbble"></i></a>
-								</p>
-								<p><a href="contact.html" class="btn btn-primary btn-outline">Contact Me!</a></p>
 							</div>
 						</div>
 					</div>
