work page basic setup done

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 						<div class="item">
 							<div class="col-md-12">
 								<div class="article">
-									<a href="blog.html" class="blog-img">
+									<a href="work.html" class="blog-img">
 										<img class="img-responsive" src="images/img-1.jpg"
 											alt="html5 bootstrap by colorlib.com">
 										<div class="overlay"></div>
@@ -240,7 +240,7 @@
 									</a>
 									<div class="desc">
 										<span class="meta">15, Feb 2018</span>
-										<h2><a href="blog.html">A Japanese Constellation</a></h2>
+										<h2><a href="work.html">A Japanese Constellation</a></h2>
 										<p>When she reached the first hills of the Italic Mountains, she had a last view
 											back on the skyline of her hometown Bookmarksgrove</p>
 									</div>
@@ -250,7 +250,7 @@
 						<div class="item">
 							<div class="col-md-12">
 								<div class="article">
-									<a href="blog.html" class="blog-img">
+									<a href="work.html" class="blog-img">
 										<img class="img-responsive" src="images/img-2.jpg"
 											alt="html5 bootstrap by colorlib.com">
 										<div class="overlay"></div>
@@ -260,7 +260,7 @@
 									</a>
 									<div class="desc">
 										<span class="meta">15, Feb 2018</span>
-										<h2><a href="blog.html">A Japanese Constellation</a></h2>
+										<h2><a href="work.html">A Japanese Constellation</a></h2>
 										<p>When she reached the first hills of the Italic Mountains, she had a last view
 											back on the skyline of her hometown Bookmarksgrove</p>
 									</div>
@@ -270,7 +270,7 @@
 						<div class="item">
 							<div class="col-md-12">
 								<div class="article">
-									<a href="blog.html" class="blog-img">
+									<a href="work.html" class="blog-img">
 										<img class="img-responsive" src="images/img-3.jpg"
 											alt="html5 bootstrap by colorlib.com">
 										<div class="overlay"></div>
@@ -280,7 +280,7 @@
 									</a>
 									<div class="desc">
 										<span class="meta">15, Feb 2018</span>
-										<h2><a href="blog.html">A Japanese Constellation</a></h2>
+										<h2><a href="work.html">A Japanese Constellation</a></h2>
 										<p>When she reached the first hills of the Italic Mountains, she had a last view
 											back on the skyline of her hometown Bookmarksgrove</p>
 									</div>
