--- a/work.html
+++ b/work.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Noah Template</title>
+	<title>Kanan Patel - UI/UX Designer</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
@@ -22,7 +22,7 @@
 	<meta name="twitter:card" content="" />
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-	<link rel="shortcut icon" href="favicon.ico">
+	<link rel="shortcut icon" href="images/favicon.ico">
 
 	<link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700" rel="stylesheet">
@@ -46,8 +46,8 @@
 	<script src="js/modernizr-2.6.2.min.js"></script>
 	<!-- FOR IE9 below -->
 	<!--[if lt IE 9]>
-	<script src="js/respond.min.js"></script>
-	<![endif]-->
+		<script src="js/respond.min.js"></script>
+		<![endif]-->
 
 </head>
 
@@ -68,10 +68,10 @@
 				<div class="row">
 					<div class="col-md-12">
 						<ul>
-							<li class="active"><a href="index.html">Home</a></li>
+							<li><a href="index.html">Home</a></li>
 							<li><a href="services.html">Services</a></li>
-							<li><a href="work.html">Work</a></li>
-							<li><a href="blog.html">Blog</a></li>
+							<li class="active"><a href="work.html">Work</a></li>
+							<!-- <li><a href="blog.html">Blog</a></li> -->
 							<li><a href="about.html">About</a></li>
 							<li><a href="contact.html">Contact</a></li>
 						</ul>
@@ -104,14 +104,15 @@
 				<div class="row">
 					<div class="col-md-12">
 						<div class="colorlib-navbar-brand">
-							<a class="colorlib-logo" href="index.html"><span>No</span><span>ah</span></a>
+							<a class="colorlib-logo" href="index.html"><span>K.</span></a>
 						</div>
 						<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
 					</div>
 				</div>
 			</div>
 		</header>
-		<div id="colorlib-work">
+
+		<div id="colorlib-blog">
 			<div class="container">
 				<div class="row text-center">
 					<h2 class="bold">Works</h2>
@@ -130,143 +131,163 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-md-12">
-						<div class="work-entry animate-box">
-							<a href="work-single.html" class="work-img"
-								style="background-image: url(images/work-1.jpg);">
-								<div class="display-t">
-									<div class="work-name">
-										<h2>Pursuing Best</h2>
-									</div>
+					<div class="col-md-4">
+						<div class="article animate-box">
+							<a href="blog.html" class="blog-img">
+								<img class="img-responsive" src="images/img-1.jpg"
+									alt="html5 bootstrap by colorlib.com">
+								<div class="overlay"></div>
+								<div class="link">
+									<span class="read">Read more</h2>
 								</div>
 							</a>
-							<div class="col-md-4 col-md-offset-4">
-								<div class="desc">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and
-										Consonantia, there live the blind texts. Separated they live in Bookmarksgrove
-										right at the coast of the Semantics, a large language ocean.</p>
-									<p class="read"><a href="#">View details</a></p>
+							<div class="desc">
+								<span class="meta">15, Feb 2018</span>
+								<h2><a href="blog.html">A Japanese Constellation</a></h2>
+								<p>When she reached the first hills of the Italic Mountains, she had a last view back on
+									the skyline of her hometown Bookmarksgrove</p>
+							</div>
+						</div>
+
+						<div class="article animate-box">
+							<a href="blog.html" class="blog-img">
+								<img class="img-responsive" src="images/img-4.jpg"
+									alt="html5 bootstrap by colorlib.com">
+								<div class="overlay"></div>
+								<div class="link">
+									<span class="read">Read more</h2>
 								</div>
+							</a>
+							<div class="desc">
+								<span class="meta">15, Feb 2018</span>
+								<h2><a href="blog.html">A Japanese Constellation</a></h2>
+								<p>When she reached the first hills of the Italic Mountains, she had a last view back on
+									the skyline of her hometown Bookmarksgrove</p>
+							</div>
+						</div>
+
+						<div class="article animate-box">
+							<a href="blog.html" class="blog-img">
+								<img class="img-responsive" src="images/img-7.jpg"
+									alt="html5 bootstrap by colorlib.com">
+								<div class="overlay"></div>
+								<div class="link">
+									<span class="read">Read more</h2>
+								</div>
+							</a>
+							<div class="desc">
+								<span class="meta">15, Feb 2018</span>
+								<h2><a href="blog.html">A Japanese Constellation</a></h2>
+								<p>When she reached the first hills of the Italic Mountains, she had a last view back on
+									the skyline of her hometown Bookmarksgrove</p>
 							</div>
 						</div>
 					</div>
-					<div class="col-md-12">
-						<div class="work-entry animate-box">
-							<a href="work-single.html" class="work-img"
-								style="background-image: url(images/work-2.jpg);">
-								<div class="display-t">
-									<div class="work-name">
-										<h2>Coordinates</h2>
-									</div>
+
+
+					<div class="col-md-4">
+						<div class="article animate-box">
+							<a href="blog.html" class="blog-img">
+								<img class="img-responsive" src="images/img-2.jpg"
+									alt="html5 bootstrap by colorlib.com">
+								<div class="overlay"></div>
+								<div class="link">
+									<span class="read">Read more</h2>
 								</div>
 							</a>
-							<div class="col-md-4 col-md-offset-4">
-								<div class="desc">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and
-										Consonantia, there live the blind texts. Separated they live in Bookmarksgrove
-										right at the coast of the Semantics, a large language ocean.</p>
-									<p class="read"><a href="#">View Details</a></p>
+							<div class="desc">
+								<span class="meta">15, Feb 2018</span>
+								<h2><a href="blog.html">A Japanese Constellation</a></h2>
+								<p>When she reached the first hills of the Italic Mountains, she had a last view back on
+									the skyline of her hometown Bookmarksgrove</p>
+							</div>
+						</div>
+
+						<div class="article animate-box">
+							<a href="blog.html" class="blog-img">
+								<img class="img-responsive" src="images/img-5.jpg"
+									alt="html5 bootstrap by colorlib.com">
+								<div class="overlay"></div>
+								<div class="link">
+									<span class="read">Read more</h2>
 								</div>
+							</a>
+							<div class="desc">
+								<span class="meta">15, Feb 2018</span>
+								<h2><a href="blog.html">A Japanese Constellation</a></h2>
+								<p>When she reached the first hills of the Italic Mountains, she had a last view back on
+									the skyline of her hometown Bookmarksgrove</p>
+							</div>
+						</div>
+
+						<div class="article animate-box">
+							<a href="blog.html" class="blog-img">
+								<img class="img-responsive" src="images/img-8.jpg"
+									alt="html5 bootstrap by colorlib.com">
+								<div class="overlay"></div>
+								<div class="link">
+									<span class="read">Read more</h2>
+								</div>
+							</a>
+							<div class="desc">
+								<span class="meta">15, Feb 2018</span>
+								<h2><a href="blog.html">A Japanese Constellation</a></h2>
+								<p>When she reached the first hills of the Italic Mountains, she had a last view back on
+									the skyline of her hometown Bookmarksgrove</p>
 							</div>
 						</div>
 					</div>
-					<div class="col-md-12">
-						<div class="work-entry animate-box">
-							<a href="work-single.html" class="work-img"
-								style="background-image: url(images/work-3.jpg);">
-								<div class="display-t">
-									<div class="work-name">
-										<h2>Cristall</h2>
-									</div>
+
+
+					<div class="col-md-4">
+						<div class="article animate-box">
+							<a href="blog.html" class="blog-img">
+								<img class="img-responsive" src="images/img-3.jpg"
+									alt="html5 bootstrap by colorlib.com">
+								<div class="overlay"></div>
+								<div class="link">
+									<span class="read">Read more</h2>
 								</div>
 							</a>
-							<div class="col-md-4 col-md-offset-4">
-								<div class="desc">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and
-										Consonantia, there live the blind texts. Separated they live in Bookmarksgrove
-										right at the coast of the Semantics, a large language ocean.</p>
-									<p class="read"><a href="#">View details</a></p>
-								</div>
+							<div class="desc">
+								<span class="meta">15, Feb 2018</span>
+								<h2><a href="blog.html">A Japanese Constellation</a></h2>
+								<p>When she reached the first hills of the Italic Mountains, she had a last view back on
+									the skyline of her hometown Bookmarksgrove</p>
 							</div>
 						</div>
-					</div>
-					<div class="col-md-12">
-						<div class="work-entry animate-box">
-							<a href="work-single.html" class="work-img"
-								style="background-image: url(images/work-4.jpg);">
-								<div class="display-t">
-									<div class="work-name">
-										<h2>Black</h2>
-									</div>
+
+						<div class="article animate-box">
+							<a href="blog.html" class="blog-img">
+								<img class="img-responsive" src="images/img-6.jpg"
+									alt="html5 bootstrap by colorlib.com">
+								<div class="overlay"></div>
+								<div class="link">
+									<span class="read">Read more</h2>
 								</div>
 							</a>
-							<div class="col-md-4 col-md-offset-4">
-								<div class="desc">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and
-										Consonantia, there live the blind texts. Separated they live in Bookmarksgrove
-										right at the coast of the Semantics, a large language ocean.</p>
-									<p class="read"><a href="#">View details</a></p>
-								</div>
+							<div class="desc">
+								<span class="meta">15, Feb 2018</span>
+								<h2><a href="blog.html">A Japanese Constellation</a></h2>
+								<p>When she reached the first hills of the Italic Mountains, she had a last view back on
+									the skyline of her hometown Bookmarksgrove</p>
 							</div>
 						</div>
-					</div>
-					<div class="col-md-12">
-						<div class="work-entry animate-box">
-							<a href="work-single.html" class="work-img"
-								style="background-image: url(images/work-5.jpg);">
-								<div class="display-t">
-									<div class="work-name">
-										<h2>Black</h2>
-									</div>
+
+						<div class="article animate-box">
+							<a href="blog.html" class="blog-img">
+								<img class="img-responsive" src="images/img-9.jpg"
+									alt="html5 bootstrap by colorlib.com">
+								<div class="overlay"></div>
+								<div class="link">
+									<span class="read">Read more</h2>
 								</div>
 							</a>
-							<div class="col-md-4 col-md-offset-4">
-								<div class="desc">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and
-										Consonantia, there live the blind texts. Separated they live in Bookmarksgrove
-										right at the coast of the Semantics, a large language ocean.</p>
-									<p class="read"><a href="#">View details</a></p>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-12">
-						<div class="work-entry animate-box">
-							<a href="work-single.html" class="work-img"
-								style="background-image: url(images/work-6.jpg);">
-								<div class="display-t">
-									<div class="work-name">
-										<h2>Black</h2>
-									</div>
-								</div>
-							</a>
-							<div class="col-md-4 col-md-offset-4">
-								<div class="desc">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and
-										Consonantia, there live the blind texts. Separated they live in Bookmarksgrove
-										right at the coast of the Semantics, a large language ocean.</p>
-									<p class="read"><a href="#">View details</a></p>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-12">
-						<div class="work-entry animate-box">
-							<a href="work-single.html" class="work-img"
-								style="background-image: url(images/work-7.jpg);">
-								<div class="display-t">
-									<div class="work-name">
-										<h2>Indice</h2>
-									</div>
-								</div>
-							</a>
-							<div class="col-md-4 col-md-offset-4">
-								<div class="desc">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and
-										Consonantia, there live the blind texts. Separated they live in Bookmarksgrove
-										right at the coast of the Semantics, a large language ocean.</p>
-									<p class="read"><a href="#">View details</a></p>
-								</div>
+							<div class="desc">
+								<span class="meta">15, Feb 2018</span>
+								<h2><a href="blog.html">A Japanese Constellation</a></h2>
+								<p>When she reached the first hills of the Italic Mountains, she had a last view back on
+									the skyline of her hometown Bookmarksgrove</p>
 							</div>
 						</div>
 					</div>
@@ -278,22 +299,22 @@
 			<div id="footer">
 				<div class="container">
 					<div class="row">
-						<div class="col-md-4 col-pb-sm">
+						<div class="col-md-12 col-pb-sm text-center">
 							<div class="row">
-								<div class="col-md-10">
+								<div class="col-md-12">
 									<h2>Let's Talk</h2>
 									<p>A small river named Duden flows by their place and supplies.</p>
-									<p><a href="#">noah@info.com</a></p>
+									<p><a href="mailto:kananpatel.bca@gmail.com">kananpatel.bca@gmail.com</a></p>
 									<p class="colorlib-social-icons">
-										<a href="#"><i class="icon-facebook4"></i></a>
-										<a href="#"><i class="icon-twitter3"></i></a>
-										<a href="#"><i class="icon-googleplus"></i></a>
-										<a href="#"><i class="icon-dribbble2"></i></a>
+										<a href="https://www.instagram.com/uiuxjunior/" target="_blank"><i
+												class="icon-instagram2"></i></a>
+										<a href="https://dribbble.com/KananPatel" target="_blank"><i
+												class="icon-dribbble"></i></a>
 									</p>
 								</div>
 							</div>
 						</div>
-						<div class="col-md-4 col-pb-sm">
+						<!-- <div class="col-md-6 col-pb-sm">
 							<h2>Latest Blog</h2>
 							<div class="f-entry">
 								<a href="#" class="featured-img" style="background-image: url(images/img-1.jpg);"></a>
@@ -316,19 +337,17 @@
 									<h3><a href="#">Road Trip</a></h3>
 								</div>
 							</div>
-						</div>
-						<div class="col-md-4 col-pb-sm">
+						</div> -->
+						<!-- <div class="col-md-4 col-pb-sm">
 							<h2>Newsletter</h2>
-							<p>A small river named Duden flows by their place and supplies it with the necessary
-								regelialia</p>
+							<p>A small river named Duden flows by their place and supplies it with the necessary regelialia</p>
 							<div class="subscribe text-center">
 								<div class="form-group">
-									<input type="text" class="form-control text-center"
-										placeholder="Enter Email address">
+									<input type="text" class="form-control text-center" placeholder="Enter Email address">
 									<input type="submit" value="Subscribe" class="btn btn-primary btn-custom">
 								</div>
 							</div>
-						</div>
+						</div> -->
 					</div>
 					<div class="row">
 						<div class="col-md-12 text-center">
@@ -339,7 +358,9 @@
 								<script>document.write(new Date().getFullYear());</script> All rights reserved | This
 								template is made with <i class="icon-heart4" aria-hidden="true"></i> by <a
 									href="https://colorlib.com" target="_blank">Colorlib</a>
-								<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+								<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --> |
+								Modified By <a href="https://priyank-solanki.github.io" target="_blank">Priyank
+									Solanki</a>
 							</p>
 						</div>
 					</div>
