feat: work and work single set

--- a/work-single.html
+++ b/work-single.html
@@ -68,9 +68,9 @@
 				<div class="row">
 					<div class="col-md-12">
 						<ul>
-							<li class="active"><a href="index.html">Home</a></li>
+							<li><a href="index.html">Home</a></li>
 							<li><a href="services.html">Services</a></li>
-							<li><a href="work.html">Work</a></li>
+							<li class="active"><a href="work.html">Work</a></li>
 							<li><a href="blog.html">Blog</a></li>
 							<li><a href="about.html">About</a></li>
 							<li><a href="contact.html">Contact</a></li>
@@ -104,7 +104,7 @@
 				<div class="row">
 					<div class="col-md-12">
 						<div class="colorlib-navbar-brand">
-							<a class="colorlib-logo" href="index.html"><span>No</span><span>ah</span></a>
+							<a class="colorlib-logo" href="index.html"><span>K.</span></a>
 						</div>
 						<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
 					</div>
@@ -166,22 +166,22 @@
 			<div id="footer">
 				<div class="container">
 					<div class="row">
-						<div class="col-md-4 col-pb-sm">
+						<div class="col-md-12 col-pb-sm text-center">
 							<div class="row">
-								<div class="col-md-10">
+								<div class="col-md-12">
 									<h2>Let's Talk</h2>
 									<p>A small river named Duden flows by their place and supplies.</p>
-									<p><a href="#">noah@info.com</a></p>
+									<p><a href="mailto:kananpatel.bca@gmail.com">kananpatel.bca@gmail.com</a></p>
 									<p class="colorlib-social-icons">
-										<a href="#"><i class="icon-facebook4"></i></a>
-										<a href="#"><i class="icon-twitter3"></i></a>
-										<a href="#"><i class="icon-googleplus"></i></a>
-										<a href="#"><i class="icon-dribbble2"></i></a>
+										<a href="https://www.instagram.com/uiuxjunior/" target="_blank"><i
+												class="icon-instagram2"></i></a>
+										<a href="https://dribbble.com/KananPatel" target="_blank"><i
+												class="icon-dribbble"></i></a>
 									</p>
 								</div>
 							</div>
 						</div>
-						<div class="col-md-4 col-pb-sm">
+						<!-- <div class="col-md-6 col-pb-sm">
 							<h2>Latest Blog</h2>
 							<div class="f-entry">
 								<a href="#" class="featured-img" style="background-image: url(images/img-1.jpg);"></a>
@@ -204,19 +204,17 @@
 									<h3><a href="#">Road Trip</a></h3>
 								</div>
 							</div>
-						</div>
-						<div class="col-md-4 col-pb-sm">
+						</div> -->
+						<!-- <div class="col-md-4 col-pb-sm">
 							<h2>Newsletter</h2>
-							<p>A small river named Duden flows by their place and supplies it with the necessary
-								regelialia</p>
+							<p>A small river named Duden flows by their place and supplies it with the necessary regelialia</p>
 							<div class="subscribe text-center">
 								<div class="form-group">
-									<input type="text" class="form-control text-center"
-										placeholder="Enter Email address">
+									<input type="text" class="form-control text-center" placeholder="Enter Email address">
 									<input type="submit" value="Subscribe" class="btn btn-primary btn-custom">
 								</div>
 							</div>
-						</div>
+						</div> -->
 					</div>
 					<div class="row">
 						<div class="col-md-12 text-center">
@@ -227,7 +225,9 @@
 								<script>document.write(new Date().getFullYear());</script> All rights reserved | This
 								template is made with <i class="icon-heart4" aria-hidden="true"></i> by <a
 									href="https://colorlib.com" target="_blank">Colorlib</a>
-								<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+								<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --> |
+								Modified By <a href="https://priyank-solanki.github.io" target="_blank">Priyank
+									Solanki</a>
 							</p>
 						</div>
 					</div>
