--- a/work.html
+++ b/work.html
@@ -133,7 +133,7 @@
 				<div class="row">
 					<div class="col-md-4">
 						<div class="article animate-box">
-							<a href="blog.html" class="blog-img">
+							<a href="work-single.html" class="blog-img">
 								<img class="img-responsive" src="images/img-1.jpg"
 									alt="html5 bootstrap by colorlib.com">
 								<div class="overlay"></div>
@@ -143,14 +143,14 @@
 							</a>
 							<div class="desc">
 								<span class="meta">15, Feb 2018</span>
-								<h2><a href="blog.html">A Japanese Constellation</a></h2>
+								<h2><a href="work-single.html">A Japanese Constellation</a></h2>
 								<p>When she reached the first hills of the Italic Mountains, she had a last view back on
 									the skyline of her hometown Bookmarksgrove</p>
 							</div>
 						</div>
 
 						<div class="article animate-box">
-							<a href="blog.html" class="blog-img">
+							<a href="work-single.html" class="blog-img">
 								<img class="img-responsive" src="images/img-4.jpg"
 									alt="html5 bootstrap by colorlib.com">
 								<div class="overlay"></div>
@@ -160,14 +160,14 @@
 							</a>
 							<div class="desc">
 								<span class="meta">15, Feb 2018</span>
-								<h2><a href="blog.html">A Japanese Constellation</a></h2>
+								<h2><a href="work-single.html">A Japanese Constellation</a></h2>
 								<p>When she reached the first hills of the Italic Mountains, she had a last view back on
 									the skyline of her hometown Bookmarksgrove</p>
 							</div>
 						</div>
 
 						<div class="article animate-box">
-							<a href="blog.html" class="blog-img">
+							<a href="work-single.html" class="blog-img">
 								<img class="img-responsive" src="images/img-7.jpg"
 									alt="html5 bootstrap by colorlib.com">
 								<div class="overlay"></div>
@@ -177,7 +177,7 @@
 							</a>
 							<div class="desc">
 								<span class="meta">15, Feb 2018</span>
-								<h2><a href="blog.html">A Japanese Constellation</a></h2>
+								<h2><a href="work-single.html">A Japanese Constellation</a></h2>
 								<p>When she reached the first hills of the Italic Mountains, she had a last view back on
 									the skyline of her hometown Bookmarksgrove</p>
 							</div>
@@ -187,7 +187,7 @@
 
 					<div class="col-md-4">
 						<div class="article animate-box">
-							<a href="blog.html" class="blog-img">
+							<a href="work-single.html" class="blog-img">
 								<img class="img-responsive" src="images/img-2.jpg"
 									alt="html5 bootstrap by colorlib.com">
 								<div class="overlay"></div>
@@ -197,14 +197,14 @@
 							</a>
 							<div class="desc">
 								<span class="meta">15, Feb 2018</span>
-								<h2><a href="blog.html">A Japanese Constellation</a></h2>
+								<h2><a href="work-single.html">A Japanese Constellation</a></h2>
 								<p>When she reached the first hills of the Italic Mountains, she had a last view back on
 									the skyline of her hometown Bookmarksgrove</p>
 							</div>
 						</div>
 
 						<div class="article animate-box">
-							<a href="blog.html" class="blog-img">
+							<a href="work-single.html" class="blog-img">
 								<img class="img-responsive" src="images/img-5.jpg"
 									alt="html5 bootstrap by colorlib.com">
 								<div class="overlay"></div>
@@ -214,14 +214,14 @@
 							</a>
 							<div class="desc">
 								<span class="meta">15, Feb 2018</span>
-								<h2><a href="blog.html">A Japanese Constellation</a></h2>
+								<h2><a href="work-single.html">A Japanese Constellation</a></h2>
 								<p>When she reached the first hills of the Italic Mountains, she had a last view back on
 									the skyline of her hometown Bookmarksgrove</p>
 							</div>
 						</div>
 
 						<div class="article animate-box">
-							<a href="blog.html" class="blog-img">
+							<a href="work-single.html" class="blog-img">
 								<img class="img-responsive" src="images/img-8.jpg"
 									alt="html5 bootstrap by colorlib.com">
 								<div class="overlay"></div>
@@ -231,7 +231,7 @@
 							</a>
 							<div class="desc">
 								<span class="meta">15, Feb 2018</span>
-								<h2><a href="blog.html">A Japanese Constellation</a></h2>
+								<h2><a href="work-single.html">A Japanese Constellation</a></h2>
 								<p>When she reached the first hills of the Italic Mountains, she had a last view back on
 									the skyline of her hometown Bookmarksgrove</p>
 							</div>
@@ -241,7 +241,7 @@
 
 					<div class="col-md-4">
 						<div class="article animate-box">
-							<a href="blog.html" class="blog-img">
+							<a href="work-single.html" class="blog-img">
 								<img class="img-responsive" src="images/img-3.jpg"
 									alt="html5 bootstrap by colorlib.com">
 								<div class="overlay"></div>
@@ -251,14 +251,14 @@
 							</a>
 							<div class="desc">
 								<span class="meta">15, Feb 2018</span>
-								<h2><a href="blog.html">A Japanese Constellation</a></h2>
+								<h2><a href="work-single.html">A Japanese Constellation</a></h2>
 								<p>When she reached the first hills of the Italic Mountains, she had a last view back on
 									the skyline of her hometown Bookmarksgrove</p>
 							</div>
 						</div>
 
 						<div class="article animate-box">
-							<a href="blog.html" class="blog-img">
+							<a href="work-single.html" class="blog-img">
 								<img class="img-responsive" src="images/img-6.jpg"
 									alt="html5 bootstrap by colorlib.com">
 								<div class="overlay"></div>
@@ -268,14 +268,14 @@
 							</a>
 							<div class="desc">
 								<span class="meta">15, Feb 2018</span>
-								<h2><a href="blog.html">A Japanese Constellation</a></h2>
+								<h2><a href="work-single.html">A Japanese Constellation</a></h2>
 								<p>When she reached the first hills of the Italic Mountains, she had a last view back on
 									the skyline of her hometown Bookmarksgrove</p>
 							</div>
 						</div>
 
 						<div class="article animate-box">
-							<a href="blog.html" class="blog-img">
+							<a href="work-single.html" class="blog-img">
 								<img class="img-responsive" src="images/img-9.jpg"
 									alt="html5 bootstrap by colorlib.com">
 								<div class="overlay"></div>
@@ -285,7 +285,7 @@
 							</a>
 							<div class="desc">
 								<span class="meta">15, Feb 2018</span>
-								<h2><a href="blog.html">A Japanese Constellation</a></h2>
+								<h2><a href="work-single.html">A Japanese Constellation</a></h2>
 								<p>When she reached the first hills of the Italic Mountains, she had a last view back on
 									the skyline of her hometown Bookmarksgrove</p>
 							</div>
